--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,3 +3,16 @@
   <p class="lead">Use this document as a way to quickly start any new project.
   <br> All you get is this text and a mostly barebones HTML document.</p>
 </div>
+
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <form action="" method="post">
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" name="email" class="form-control">
+      </div>
+
+      <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+    </form>
+  </div>
+</div>
