--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,11 +1,21 @@
 <div class="starter-template">
-  <h1>Bootstrap starter template</h1>
-  <p class="lead">Use this document as a way to quickly start any new project.
-  <br> All you get is this text and a mostly barebones HTML document.</p>
+  <h1>Subscribe to Our Newsletter</h1>
+  <p class="lead">Enter your email below</p>
 </div>
 
 <div class="row justify-content-center">
   <div class="col-md-6">
+    {{#if message}}
+      <div class="alert alert-success alert-dismissible fade show"
+        role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert"
+          aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    {{/if}}
+
     <form action="" method="post">
       <div class="form-group">
         <label for="email">Email Address</label>
