--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -46,6 +46,6 @@
 
   <script src="/jquery/dist/jquery.min.js"></script>
   <script src="/popper.js/dist/umd/popper.min.js"></script>
-  <script srt="/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
